--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
            version="3.0">
 
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
     <servlet>
         <servlet-name>TestServlet</servlet-name>
         <servlet-class>com.epam.ism.servlet.TestServlet</servlet-class>
@@ -14,6 +18,18 @@
         <servlet-name>TestServlet</servlet-name>
         <url-pattern>/test</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>TripSelectionServlet</servlet-name>
+        <servlet-class>com.epam.ism.servlet.TripSelectionServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>TripSelectionServlet</servlet-name>
+        <url-pattern>/tripSelection</url-pattern>
+    </servlet-mapping>
+
+
 
 
 
