--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,23 +10,13 @@
     </welcome-file-list>
 
     <servlet>
-        <servlet-name>TestServlet</servlet-name>
-        <servlet-class>com.epam.ism.servlet.TestServlet</servlet-class>
+        <servlet-name>FrontController</servlet-name>
+        <servlet-class>com.epam.ism.controller.FrontController</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>TestServlet</servlet-name>
-        <url-pattern>/test</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>TripSelectionServlet</servlet-name>
-        <servlet-class>com.epam.ism.servlet.TripSelectionServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>TripSelectionServlet</servlet-name>
-        <url-pattern>/tripSelection</url-pattern>
+        <servlet-name>FrontController</servlet-name>
+        <url-pattern>/controller/*</url-pattern>
     </servlet-mapping>
 
 
