--- a/src/main/resources/connectionPool.properties
+++ b/src/main/resources/connectionPool.properties
@@ -1,5 +1,4 @@
-url = jdbc:h2:tcp://localhost/railways_db
-driver = org.h2.Driver
-username = admin
-password = admin
+url = jdbc:mysql://localhost:3306/railways_db
+driver = com.mysql.jdbc.Driver
+username = root
 pool_size = 10
